--- a/package.json
+++ b/package.json
@@ -20,13 +20,21 @@
         "autod": "autod",
         "lint": "tslint --project . -c tslint.json",
         "clean": "ets clean",
-        "migrate": "npx sequelize migration:generate"
+        "migrate-dev": "cross-env NODE_ENV=development npx sequelize db:migrate",
+        "migrate-create": "npx sequelize migration:generate",
+        "migrate-undo": "npx sequelize-cli db:migrate:undo:all",
+        "seeds-dev": "cross-env NODE_ENV=development npx sequelize db:seed:all",
+        "seeds-create": "npx sequelize-cli seed:generate",
+        "seeds-undo": "npx sequelize-cli db:seed:undo:all"
     },
     "dependencies": {
         "egg": "^2.6.1",
+        "egg-onerror": "^2.1.0",
         "egg-scripts": "^2.6.0",
         "egg-sequelize": "^5.0.0",
-        "mysql2": "^1.6.5"
+        "egg-validate": "^2.0.2",
+        "mysql2": "^1.6.5",
+        "rc-js-utils": "^0.1.3"
     },
     "devDependencies": {
         "@types/mocha": "^2.2.40",
@@ -38,6 +46,7 @@
         "egg-bin": "^4.11.0",
         "egg-ci": "^1.8.0",
         "egg-mock": "^3.16.0",
+        "js-doc": "^0.5.0",
         "sequelize-cli": "^5.4.0",
         "tslib": "^1.9.0",
         "tslint": "^5.0.0",
