--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "egg-scripts": "^2.6.0",
         "egg-sequelize": "^5.0.0",
         "egg-validate": "^2.0.2",
+        "lodash": "^4.17.11",
         "mysql2": "^1.6.5",
         "rc-js-utils": "^0.1.3"
     },
@@ -43,6 +44,7 @@
         "autod": "^3.0.1",
         "autod-egg": "^1.1.0",
         "babel-register": "^6.26.0",
+        "cross-env": "^5.2.0",
         "egg-bin": "^4.11.0",
         "egg-ci": "^1.8.0",
         "egg-mock": "^3.16.0",
